# 2024-03-19-poetry-build-deps-issue

./: .gitignore  README.md  compose.yml
backend-with-mydevpi/: pyproject.toml
backend-with-pypi/: pyproject.toml
backend-with-pypi/backend/: __init__.py
mydevpi/: Dockerfile
pkginfo-playground/: fetch.sh  parse.py
poetry-1.8.2-pkginfo-1.10.0/: Dockerfile
poetry-1.8.2-pkginfo-1.9.6/: Dockerfile
poetry-1.9.x.prerelease-pkginfo-1.9.6/: Dockerfile
